# MenoBot

./: .cov_config  .gitattributes  .gitignore  Makefile  README.md  TODO.txt  bot.py  bot_states.py  card.py  cards_list.py  help.py  main.py  pyproject.toml  search.py  start.py  token  user.py  utils.py
.github/workflows/: test.yml
menobot/menobot/: bot_states.py  card.py  cards_list.py  help.py  main.py  search.py  user.py  utils.py
menobot/tests/: test_menobot.py
menobot/utils/: formatter.py  utils.py  worker.py
src/: bot_states.py  card.py  main.py  search.py
