[tool.poetry]
name = "MenoBot"
version = "0.1.0"
description = "A Telegram Bot to monitor price fluctuations of YuGiOh cards on cardmarket."
authors = ["Ledmington <ledmington.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^21.1.1"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
black = "^24.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
